change icon, title, fix overflow-x

--- a/client/src/styles/home.sass
+++ b/client/src/styles/home.sass
@@ -73,21 +73,28 @@ $descWidth: 70vw
         &:hover
           letter-spacing: 5px
       .description
-        padding: 20px
+        padding: 20px 10px
         margin: 0
         color: $fourth
         cursor: pointer
         animation: zoomIn 0.3s ease-out forwards
         .description-text
           max-height: 255px
-          overflow-y: auto
+          padding: 0 10px
           text-align: justify
           font-size: 1.2rem
           line-height: 1.2em
           @media screen and ( max-width: 1244px )
             font-size: 1.0rem     
           @media screen and ( max-width: 500px )
+            overflow-y: auto
             font-size: 0.8rem
+          ::-webkit-scrollbar 
+            width: 3px
+          ::-webkit-scrollbar-track 
+            background: #f1f1f1
+          ::-webkit-scrollbar-thumb 
+            background: $fourth
         .colorFade
           animation: colorFade 1.3s forwards
         .links
